welcome.lessons.welcome.variables.Variables.scala.code
var nbPas= 0
while (estSurBiscuit()) {
  avance(nbPas:Int)
  nbPas=nbPas+1
}  
if (EstSurBiscuit()) {
  prendBiscuit()
}
var DejaFait=0
while (DejaFait!=nbPas){
  recule()
  DejaFait=DejaFait+1
}